--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TitleAA</title>
+    <title>My first site</title>
 </head>
 <body>
 
@@ -12,6 +12,8 @@
     <h4>Heading 1 for your info</h4>
     <h5>Heading 1 for your info</h5>
     <h6>Heading 1 for your info</h6>
+    <p>i want to change the views</p>
+    <p>it will be happen</p>
     
 </body>
 
