--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
     
     <h2><p>June 2, 2012</p></h2>
     <p><img src="images/segway1.jpg"></p>
-    <p>My first day of the trip! I can't believe I finally got everything packed and ready to go. Because I'm on a Segway, I wasn't able to bring a whole lot with me: cell phone, iPod, digital camera, and a protein bar. Just the essentials. As Lao Tzu would have said,  </p>
+    <p>My first day of the trip! I can't believe I finally got everything packed and ready to go. Because I'm on a Segway, I wasn't able to bring a whole lot with me: 
+
+        <ol>
+   <li>cell phone,</li>
+   <li>iPod,</li>
+   <li>digital camera,</li>
+   <li>a protein bar</li>
+        </ol>     Just the essentials. As Lao Tzu would have said,  </p>
 <br>
 <br>
     <h2><q>A journey of a thousand miles begins with one Segway.</q></h2>
