--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <ol>
    <li>cell phone,</li>
-   <li>iPod,</li>
+   <li><em>iPod,</em></li>
    <li>digital camera,</li>
    <li>a protein bar</li>
         </ol>     Just the essentials. As Lao Tzu would have said,  </p>
