change the folder "images"

--- a/20150827/index_Segway.html
+++ b/20150827/index_Segway.html
@@ -12,7 +12,7 @@
     
    
     <h2><p>August 20, 2012</p></h2>
-    <img src="image/segway2.jpg">
+    <img src="Images/segway2.jpg">
     <p>Well I made it 1200 miles already, and I passed through some interesting places on the way: 
         <ul>
             <li>Walla Walla, WA, </li>
@@ -31,7 +31,7 @@
     <p>I definitely won't be passing any cars.</p>
     
     <h2><p>June 2, 2012</p></h2>
-    <p><img src="image/segway1.jpg"></p>
+    <p><img src="Images/segway1.jpg"></p>
     <p>My first day of the trip! I can't believe I finally got everything packed and ready to go. Because I'm on a Segway, I wasn't able to bring a whole lot with me: 
 
         <ol>
