--- a/20150827/index_Lounge.html
+++ b/20150827/index_Lounge.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>Welcome to the Head First Lounge</h1>
-    <img src="image/drinks.gif">
+    <img src="Images/drinks.gif">
     <p>
         Join us any evening for refreshing <a href="html/elixir.html">elixirs</a>, conversation and maybe a game or two of
         <em>Dance Dance Revolution</em>. Wireless access is always provided; BYOWS (Bring your own web server).
