--- a/20150827/index_myPod.html
+++ b/20150827/index_myPod.html
@@ -19,19 +19,19 @@
     
 
     <p>
-    <a href="Image/seattle_video_med.jpg"><img src="Image/seattle_video_med.jpg" width="200"></a>
+    <a href="Images/seattle_video_med.jpg"><img src="Images/seattle_video_med.jpg" width="200"></a>
     
-    <a href="Image/seattle_classic.html"><img src="Image/seattle_classic.jpg" alt="" width="200"></a>
+    <a href="Images/seattle_classic.html"><img src="Images/seattle_classic.jpg" alt="" width="200"></a>
     <a href="">
-    <img src="Image/seattle_medium.jpg" alt="" width="200"></a>
-    <a href=""><img src="Image/seattle_downtown.jpg" alt="" width="200"></a>
+    <img src="Images/seattle_medium.jpg" alt="" width="200"></a>
+    <a href=""><img src="Images/seattle_downtown.jpg" alt="" width="200"></a>
     </p>
     <p>
         Me and my iPod in Seattle! You can see the Space Needle. You can't see the 628 coffee shops.
     </p>
     <h2>Birmingham, England</h2>
     <p>
-    <img src="Image/britain.jpg" alt="">
+    <img src="Images/britain.jpg" alt="">
     </p>
     <p>
         Here are some iPod photos around Birmingham. We've obviously got some passionate folks over here who love their iPods. Check out the classic red British telephone box!
