--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Yuxian Html Homework</title>
+    <style type="text/css">
+    h1 {font-size: 50px;
+        color: aqua
+    }
+    
+    </style>
 </head>
 <body>
 
