update the code

--- a/code.html
+++ b/code.html
@@ -38,6 +38,7 @@
 <h3>id是單一使用屬性的指定標籤，CSS是用#</h3>
 <h3>class是兩個以上的元件會用到指定,用CSS是用.</h3>
 <h3>/* */ CSS暫時不要用到的標籤</h3>
+<h3> < ! --  --> html隱藏語法 
 <h3>*放在最上面可以直接把瀏覽器的設定取消</h3>
 <h3>em是抓字高</h3>
 <h3>background-repeat 貼圖重複</h3>
