--- a/20150831/index＿resume.html
+++ b/20150831/index＿resume.html
@@ -11,8 +11,8 @@
      
 <h1 id=name>Liao Yuxian</h1>
     <ul id="nav">
-    <li>Address:No.6, Ally 6, Ln. 87, Taiping Rd., Taiping Dist., Taichung City 41165, Taiwan.</li>
-        <li>Phone Nunber:+886-932-392123</li>
+    <li>Address:Taiping Dist., Taichung City 41165, Taiwan.</li>
+        <li>Phone Nunber:+886-932-392</li>
         <li>E-mail:liaoyuxian@gmail.com</li>
     </ul>
     
