--- a/code.html
+++ b/code.html
@@ -22,7 +22,7 @@
 <h3>table:表格</h3>
 <h3>th:表格選項名稱head</h3>
 <h3>td:表格內容date</h3>
-<h3>span可以自行指定控制字體粗細
+<h3>span可以自行指定控制字體粗細,在inline裡面可以條粗細大小</h3>
 <h3>text-decoration設底線</h3>
 <h3>font-style:italic 斜體字向右傾斜，而且襯線具有額外的曲線</h3>
 <h3>font-style:oblique偽斜體設定下，正規文字向右傾斜</h3>
@@ -47,6 +47,18 @@
 <h3>overflow  scroll 可以讓使用者滾動內容</h3>
 <h3>line-height 可以調行寬</h3>
 <h3>padding順時針的順序調整數字上右下左，如果兩個數子 前數為上下 後數為左右</h3>
+<h3>position 可以調整物件的位置</h3>
+<h3>頁面裡說際小夜面，用position來控制與盒子之間的距離</h3>
+<h3>line-height 調行與行的寬度</h3>
+<h3>float : right調整圖繞文，div盒子靠右</h3>
+<h3>Pseudo-classes 是在設定超連結後的狀態，用：加ID就好了 a:link</h3>
+<h3>a:visited是說超連結被點過後的語法</h3>
+<h3>clear設定如果有被壓到就退行</h3>
+<h3>min-height 至少長到一個尺寸高度</h3>
+<h3>margin-left/right 設定auto可以讓瀏覽器自行置中</h3>
+<h3>p:before 在網頁中所有的內容前面都有想同元素</h3>
+<h3>command+shift+H Sumlime text快速縮排 <h3>
+
 
 
 </body>
